--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -35,6 +35,7 @@ CONFIG_CFI=y
 # CONFIG_CFI_PERMISSIVE is not set
 # CONFIG_CFI_CLANG is not set
 CONFIG_LLVM_POLLY=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
