--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -233,6 +233,8 @@ CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_MTK_AEE_FEATURE=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
+CONFIG_MTK_SYSTRACKER_DISABLE=y
 CONFIG_MTK_SIB_USB_SWITCH=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
