ARM64: configs: rosemary: Setup big.LITTLE CPU Masks
Signed-off-by: Vaisakh Murali <mvaisakh@statixos.com>
Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>
Change-Id: Idc62ea5b25e93ac49f8a4b461859cac49b08e1a0
Signed-off-by: Neebe3289 <neebexd@gmail.com>
Signed-off-by: Neebe3289 <neebexd@gmail.com>

--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -496,3 +496,5 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_CRC8=y
+CONFIG_LITTLE_CPU_MASK=63
+CONFIG_BIG_CPU_MASK=193
