--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -9,7 +9,7 @@ CONFIG_UCLAMP_MAP_OPP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
 CONFIG_SCHED_TUNE=y
-CONFIG_CONFIG_SCHED_WALT=y
+CONFIG_SCHED_WALT=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_BLK_CGROUP=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
